--- a/style.css
+++ b/style.css
@@ -1,431 +1,442 @@
 html{
-    scroll-behavior: smooth !important;
+  scroll-behavior: smooth !important;
 }
 
 body {
-    background-color: black !important;
-    overflow-x: hidden;
+  background: linear-gradient(to right, #003366, #000000) !important;
+  overflow-x: hidden;
 }
 
 .row {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.fixed-top {
-    position: relative;
-    top: 0;
-    right: 0;
-    z-index: 1000;
-    width: 100%;
-    justify-content: end;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .img-shadow {
-    box-shadow: 15px 10px 5px rgb(13, 24, 24);
+  box-shadow: 15px 10px 5px rgb(13, 24, 24);
 }
 
 .nav {
-    height: 50px;
-    width: 100%;
-    right: 0;
-    background-color: black;
-    position: relative;
-    justify-content: end;
-    float: right !important;
-  }
-  
-  .nav > .nav-header {
-    display: inline;
-  }
-  
-  .nav > .nav-header > .nav-title {
-    display: inline-block;
-    font-size: 22px;
-    color: darkslategrey;
-    padding: 10px 10px 10px 10px;
-  }
-  
+  height: 50px;
+  width: 100%;
+  right: 0;
+  background-color: transparent;
+  position: relative;
+  justify-content: end;
+  float: right !important;
+  transition: background-color 0.3s ease;
+}
+
+.nav-fixed {
+  background-color: #003366; /* Fixed background color */
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000; /* Ensure it stays on top */
+}
+
+.nav > .nav-header {
+  display: inline;
+}
+
+.nav > .nav-header > .nav-title {
+  display: inline-block;
+  font-size: 22px;
+  color: #abc5e2;
+  padding: 10px 10px 10px 10px;
+}
+
+.nav > .nav-btn {
+  display: none;
+}
+
+.nav > .nav-links {
+  display: inline;
+  float: right;
+}
+
+.nav > .nav-links > a {
+  display: inline-block;
+  padding: 15px 30px 1px 10px;
+  text-decoration: none;
+  color: #abc5e2;
+  font-size: 19px;
+}
+
+.nav > .nav-links > a:hover {
+  color: rgb(165, 4, 12);
+}
+
+.nav > .nav-links > a:focus {
+  color: rgb(255, 0, 34);
+}
+
+
+.nav > #nav-check {
+  display: none;
+}
+
+@media (max-width:768px) {
   .nav > .nav-btn {
-    display: none;
+    display: inline-block;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    justify-content: end;
   }
-  
+  .nav > .nav-btn > label {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    padding: 13px;
+  }
+  .nav > .nav-btn > label:hover,.nav  #nav-check:checked ~ .nav-btn > label {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+  .nav > .nav-btn > label > span {
+    display: block;
+    width: 25px;
+    height: 10px;
+    border-top: 2px solid #eee;
+  }
   .nav > .nav-links {
-    display: inline;
-    float: right;
+    position: absolute;
+    display: block;
+    width: 100%;
+    background-color: #333;
+    height: 0px;
+    transition: all 0.3s ease-in;
+    overflow-y: hidden;
+    top: 50px;
+    left: 0px;
   }
-  
   .nav > .nav-links > a {
-    display: inline-block;
-    padding: 15px 30px 1px 10px;
-    text-decoration: none;
-    color: darkslategrey;
-    font-size: 19px;
+    display: block;
+    width: 100%;
   }
-  
-  .nav > .nav-links > a:hover {
-    color: rgb(165, 4, 12);
+  .nav > #nav-check:not(:checked) ~ .nav-links {
+    height: 0px;
   }
+  .nav > #nav-check:checked ~ .nav-links {
+    height: calc(100vh - 50px);
+    overflow-y: auto;
+  }
+}
 
-  .nav > .nav-links > a:focus {
-    color: rgb(255, 0, 34);
-  }
+.un {
+  display: inline-block;
+  padding-bottom:2px;
+  background-position: 0 100%;
+  background-size: 0% 2px;
+  background-repeat: no-repeat;
+  transition:
+    background-size 0.3s,
+    background-position 0s 0.3s;
+}
 
-  
-  .nav > #nav-check {
-    display: none;
-  }
-  
-  @media (max-width:768px) {
-    .nav > .nav-btn {
-      display: inline-block;
-      position: absolute;
-      right: 0px;
-      top: 0px;
-      justify-content: end;
-    }
-    .nav > .nav-btn > label {
-      display: inline-block;
-      width: 50px;
-      height: 50px;
-      padding: 13px;
-    }
-    .nav > .nav-btn > label:hover,.nav  #nav-check:checked ~ .nav-btn > label {
-      background-color: rgba(0, 0, 0, 0.3);
-    }
-    .nav > .nav-btn > label > span {
-      display: block;
-      width: 25px;
-      height: 10px;
-      border-top: 2px solid #eee;
-    }
-    .nav > .nav-links {
-      position: absolute;
-      display: block;
-      width: 100%;
-      background-color: #333;
-      height: 0px;
-      transition: all 0.3s ease-in;
-      overflow-y: hidden;
-      top: 50px;
-      left: 0px;
-    }
-    .nav > .nav-links > a {
-      display: block;
-      width: 100%;
-    }
-    .nav > #nav-check:not(:checked) ~ .nav-links {
-      height: 0px;
-    }
-    .nav > #nav-check:checked ~ .nav-links {
-      height: calc(100vh - 50px);
-      overflow-y: auto;
-    }
-  }
+.un-red {
+  background-image: linear-gradient(rgb(165, 4, 12) 0 0);
+}
 
-  .un {
-    display: inline-block;
-    padding-bottom:2px;
-    background-position: 0 100%;
-    background-size: 0% 2px;
-    background-repeat: no-repeat;
-    transition:
-      background-size 0.3s,
-      background-position 0s 0.3s;
-  }
+.un-white {
+  background-image: linear-gradient(#ffffff 0 0);
+}
 
-  .un-red {
-    background-image: linear-gradient(rgb(165, 4, 12) 0 0);
-  }
-
-  .un-white {
-    background-image: linear-gradient(#ffffff 0 0);
-  }
-  
-  .un:hover {
-    background-position: 100% 100%;
-    background-size: 100% 2px;
+.un:hover {
+  background-position: 100% 100%;
+  background-size: 100% 2px;
 }
 
 .custom-heading {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: bolder;
-    font-style: oblique;
-    text-align: center;
-    background: linear-gradient(90deg, #000000, rgb(161, 212, 212));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    color: #808080;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: bolder;
+  font-style: oblique;
+  text-align: center;
+  background: linear-gradient(90deg, #000000, rgb(161, 212, 212));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: #808080;
 }
 
 .custom-font {
-    text-align: justify;
-    background: linear-gradient(90deg, #3b1e1e, #1770a3);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    color: #808080;
+  text-align: justify;
+  background: linear-gradient(90deg, #5a7dbd, #4a4a4a);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: #808080;
+}
+
+.custom-font2 {
+  text-align: justify;
+  background: linear-gradient(90deg, #429fc4, #6780a0);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: #808080;
 }
 
 .center {
-  text-align: center !important;
+text-align: center !important;
 }
 
 .xl-font {
-    font-size: 65px;
-    text-align: center;
+  font-size: 65px;
+  text-align: center;
 }  
 
 .gallery {
-    --g: 5px; /* the gap */
-    
-    display: grid;
-    clip-path: inset(1px); /* to avoid visual glitchs */
-    justify-content: center;
-  }
-  .gallery > img {
-    --_p: calc(-1*var(--g));
-    grid-area: 1/1;
-    width: 100%; /* control the size */
-    aspect-ratio: 1.1;
-    cursor: pointer;
-    transition: .4s .1s;
-  }
-  .gallery > img:first-child {
-    clip-path: polygon(0 0, calc(100% + var(--_p)) 0 , 0 calc(100% + var(--_p)))
-  }
-  .gallery > img:last-child {
-    clip-path: polygon(100% 100%, 100% calc(0% - var(--_p)), calc(0% - var(--_p)) 100%)
-  }
-  .gallery:hover > img:last-child,
-  .gallery:hover > img:first-child:hover{
-    --_p: calc(50% - var(--g));
-  }
-  .gallery:hover > img:first-child,
-  .gallery:hover > img:first-child:hover + img{
-    --_p: calc(-50% - var(--g));
-  }
-
-  .buttons {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  button {
-    --c:  #181818;
-    color: darkslategrey;
-    padding: 15px 25px;
-    font-size: 20rem;
-    font-weight: bolder;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    box-shadow:  2px 3px 6px var(--c);
-    --_g: linear-gradient(var(--c) 0 0) no-repeat;
-    background: 
-      var(--_g) calc(var(--_p,0%) - 100%) 0%,
-      var(--_g) calc(200% - var(--_p,0%)) 0%,
-      var(--_g) calc(var(--_p,0%) - 100%) 100%,
-      var(--_g) calc(200% - var(--_p,0%)) 100%;
-    background-size: 50.5% calc(var(--_p,0%)/2 + .5%);
-    outline-offset: .1em;
-    transition: background-size .4s, background-position 0s .4s;
-  }
-
-  button:hover {
-    color: #8899a6;
-    --_p: 100%;
-    transition: background-position .4s, background-size 0s;
-  }
-  button:active {
-    box-shadow: 0 0 9e9q inset var(--c); 
-    background-color: var(--c);
-    color: #000000;
-  }
-
-  .map-container{
-    overflow:hidden;
-    padding-bottom:56.25%;
-    position:relative;
-    height:0;
-  }
-  .map-container iframe{
-    left:0;
-    top:0;
-    height:100%;
-    width:100%;
-    position:absolute;
-  }
-
-  .logos {
-    display: flex;
-    justify-content: center;
-  }
-
-  .logos .list-group {
-    display: flex;
-    justify-content: center;
-    gap: 40px;
-    margin-top: 25px;
-  }
-
-  .logos a {
-    text-decoration: none;
-    color: inherit;
-  }
-
-  .logos a i {
-    color: darkslategrey;
-    transition: color 0.3s;
-    text-align: center;
-  }
+  --g: 5px; /* the gap */
   
-  .logos a i:hover {
-    color: red;
-  }
+  display: grid;
+  clip-path: inset(1px); /* to avoid visual glitchs */
+  justify-content: center;
+}
+.gallery > img {
+  --_p: calc(-1*var(--g));
+  grid-area: 1/1;
+  width: 100%; /* control the size */
+  aspect-ratio: 1.1;
+  cursor: pointer;
+  transition: .4s .1s;
+}
+.gallery > img:first-child {
+  clip-path: polygon(0 0, calc(100% + var(--_p)) 0 , 0 calc(100% + var(--_p)))
+}
+.gallery > img:last-child {
+  clip-path: polygon(100% 100%, 100% calc(0% - var(--_p)), calc(0% - var(--_p)) 100%)
+}
+.gallery:hover > img:last-child,
+.gallery:hover > img:first-child:hover{
+  --_p: calc(50% - var(--g));
+}
+.gallery:hover > img:first-child,
+.gallery:hover > img:first-child:hover + img{
+  --_p: calc(-50% - var(--g));
+}
 
-  .table,
-  .table tr,
-  .table thead,
-  .table tbody,
-  .table th,
-  .table td {
-      border: none;
-  }
-  
-  th, td {
-    text-align: center;
-    padding: 20px;
-    font-weight: bold;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: darkslategrey;
-  }
+.buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+button {
+  --c:  #181818;
+  color: #abc5e2;
+  padding: 15px 25px;
+  font-size: 20rem;
+  font-weight: bolder;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  box-shadow:  2px 3px 6px var(--c);
+  --_g: linear-gradient(var(--c) 0 0) no-repeat;
+  background: 
+    var(--_g) calc(var(--_p,0%) - 100%) 0%,
+    var(--_g) calc(200% - var(--_p,0%)) 0%,
+    var(--_g) calc(var(--_p,0%) - 100%) 100%,
+    var(--_g) calc(200% - var(--_p,0%)) 100%;
+  background-size: 50.5% calc(var(--_p,0%)/2 + .5%);
+  outline-offset: .1em;
+  transition: background-size .4s, background-position 0s .4s;
+}
+
+button:hover {
+  color: #8899a6;
+  --_p: 100%;
+  transition: background-position .4s, background-size 0s;
+}
+button:active {
+  box-shadow: 0 0 9e9q inset var(--c); 
+  background-color: var(--c);
+  color: #000000;
+}
+
+.map-container{
+  overflow:hidden;
+  padding-bottom:56.25%;
+  position:relative;
+  height: 30px;
+}
+
+.map-container iframe{
+  left:0;
+  top:0;
+  height:100%;
+  width:100%;
+  position:absolute;
+}
+
+.logos {
+  display: flex;
+  justify-content: center;
+}
+
+.logos .list-group {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  margin-top: 25px;
+}
+
+.logos a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.logos a i {
+  color: darkslategrey;
+  transition: color 0.3s;
+  text-align: center;
+}
+
+.logos a i:hover {
+  color: red;
+}
+
+.table,
+.table tr,
+.table thead,
+.table tbody,
+.table th,
+.table td {
+    border: none;
+}
+
+th, td {
+  text-align: center;
+  padding: 20px;
+  font-weight: bold;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: darkslategrey;
+}
 
 
- td a {
-    text-decoration: none;
-    color: inherit;
-  } 
+td a {
+  text-decoration: none;
+  color: inherit;
+} 
 
- td a:hover i {
-    color: red;
-  }
-  
+td a:hover i {
+  color: red;
+}
+
 span.oneword {
-    white-space: nowrap ;
-  }
+  white-space: nowrap ;
+}
 
-  /* card */
+/* card */
 
 .card{
-  position: relative;
-  background: linear-gradient(0deg, #000000 0%, #000000 100%);
+position: relative;
+background: linear-gradient(0deg, #000000 0%, #000000 100%);
 }
 
 .card .face{
-  width:100%;
-  height: 200px;
-  transition:.5s;
+width:100%;
+height: 200px;
+transition:.5s;
 }
 
 .card .face.face1{
-  position: relative;
-  background: linear-gradient(0deg, #333 0%, #2c2c2c 100%) !important;
-  display: flex;
-  justify-content: center;
-  align-content:center;
-  align-items: center;
-  z-index: 1;
-  transform: translateY(100px);
+position: relative;
+background: linear-gradient(0deg, #333 0%, #2c2c2c 100%) !important;
+display: flex;
+justify-content: center;
+align-content:center;
+align-items: center;
+z-index: 1;
+transform: translateY(100px);
 }
 
 .card:hover .face.face1{
-  transform: translateY(0);   
+transform: translateY(0);   
 }
 
 
 .card .face.face1 .content{
-  opacity: .2;
-  transition:  0.5s;
-  text-align: center;
+opacity: .2;
+transition:  0.5s;
+text-align: center;
 
 }
 
 .card:hover .face.face1 .content{
-  opacity: 1;
+opacity: 1;
 }
 
 .card .face.face1 .content i, iconify-icon{
-  font-size: 3em;
-  color: rgb(255, 255, 255);
-  display: inline-block;
-   
+font-size: 3em;
+color: rgb(255, 255, 255);
+display: inline-block;
+ 
 }
 
 .card .face.face1 .content h3{
-  font-size: 1em;
-  color: white;
-  text-align: center;
-  
+font-size: 1em;
+color: white;
+text-align: center;
+
 }
 
 .card .face.face1 .content a{
-   transition: .5s;
+ transition: .5s;
 }
 
 .card .face.face2{
-   position: relative;
-   background: linear-gradient(0deg, #949191 0%, #2c2c2c 90%) !important;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   padding: 20px;
-  box-sizing: border-box;
-  box-shadow: 0 20px 50px rgba(22, 22, 22, 0.8);
-  transform: translateY(-100px);
-  backdrop-filter: blur(10px);
+ position: relative;
+ background: linear-gradient(0deg, #949191 0%, #2c2c2c 90%) !important;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ padding: 20px;
+box-sizing: border-box;
+box-shadow: 0 20px 50px rgba(22, 22, 22, 0.8);
+transform: translateY(-100px);
+backdrop-filter: blur(10px);
 }
 
 .card .face.face2 .content {
-  max-height: 200px;
-  overflow-y: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  padding-bottom: 10px;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
+max-height: 200px;
+overflow-y: auto;
+display: flex;
+flex-direction: column;
+align-items: center;
+text-align: center;
+padding-bottom: 10px;
+scrollbar-width: none;
+-ms-overflow-style: none;
 }
 
 .card .face.face2 .content::-webkit-scrollbar {
-  display: none;
+display: none;
 }
 
 
 .card:hover .face.face2{
-    transform: translateY(0);
+  transform: translateY(0);
 
 }
 
 .card .face.face2 .content p, a{
-  font-size: 10pt;
-  margin: 0 ;
-  padding: 0;
-  color:#ccc;
+font-size: 10pt;
+margin: 0 ;
+padding: 0;
+color:#ccc;
 }
 
 .card .face.face2 .content a{
-  text-decoration:none;
-  color: #ccc;
-  box-sizing: border-box;
-  outline : 1px inset #fc0000;
-  padding: 10px;
-  margin: 15px 0 0;
-  display: inline-block;
+text-decoration:none;
+color: #ccc;
+box-sizing: border-box;
+outline : 1px inset #fc0000;
+padding: 10px;
+margin: 15px 0 0;
+display: inline-block;
 }
 
 .card .face.face2 .content a:hover{
-  color: rgb(255, 255, 255); 
-  box-shadow: inset 0px 0px 10px rgba(0,0,0,0.5);
+color: rgb(255, 255, 255); 
+box-shadow: inset 0px 0px 10px rgba(0,0,0,0.5);
 }
