--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
 }
 
 .nav > .nav-links > a:hover {
-  color: rgb(165, 4, 12);
+  color: rgb(226, 6, 17);
 }
 
 .nav > .nav-links > a:focus {
@@ -239,18 +239,18 @@ button {
     var(--_g) calc(200% - var(--_p,0%)) 100%;
   background-size: 50.5% calc(var(--_p,0%)/2 + .5%);
   outline-offset: .1em;
-  transition: background-size .4s, background-position 0s .4s;
+  transition: background-color 0.4s ease-in-out;
+
 }
 
 button:hover {
-  color: #8899a6;
-  --_p: 100%;
-  transition: background-position .4s, background-size 0s;
+  background-color: #003366;
 }
+
 button:active {
-  box-shadow: 0 0 9e9q inset var(--c); 
-  background-color: var(--c);
-  color: #000000;
+  background-color: #024f9b;
+  transition: background-color 0s !important;
+
 }
 
 .map-container{
